--- a/gcam-ios/resources/gcam.storyboard
+++ b/gcam-ios/resources/gcam.storyboard
@@ -13,6 +13,10 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HSL-lF-XJB">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="87" id="fDS-3j-nzO"/>
+                                    <constraint firstAttribute="height" constant="47" id="iSB-h4-6OL"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Front Cam">
                                     <color key="titleColor" red="0.20000000000000001" green="0.59999999999999998" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
@@ -32,9 +36,6 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tnm-fd-HxT">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="47" id="vAR-FY-eoe"/>
-                                </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Back Cam">
                                     <color key="titleColor" red="0.20000000000000001" green="0.40000000000000002" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -93,30 +94,49 @@
                                     <action selector="saveImage:" destination="c1b-D6-9bv" eventType="touchUpInside" id="nIr-L7-JoH"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0EN-DM-A3X">
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="97" id="TBw-TV-TWN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Apply">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="applyFilter:" destination="c1b-D6-9bv" eventType="touchUpInside" id="jfN-F5-YDk"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="G9O-L1-Tcp" firstAttribute="top" secondItem="jhj-lk-Yfg" secondAttribute="top" type="default" id="6po-V7-r8D"/>
                             <constraint firstItem="HSL-lF-XJB" firstAttribute="leading" secondItem="jhj-lk-Yfg" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="7xU-V1-Nb5"/>
                             <constraint firstItem="eEn-za-2wg" firstAttribute="top" secondItem="jhj-lk-Yfg" secondAttribute="top" type="default" id="9Mi-yb-4sq"/>
+                            <constraint firstItem="Tnm-fd-HxT" firstAttribute="baseline" secondItem="HSL-lF-XJB" secondAttribute="baseline" type="default" id="IVI-Xd-iGd"/>
                             <constraint firstItem="Tnm-fd-HxT" firstAttribute="leading" secondItem="HSL-lF-XJB" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Jth-4V-IcV"/>
                             <constraint firstItem="eEn-za-2wg" firstAttribute="leading" secondItem="jhj-lk-Yfg" secondAttribute="leading" type="default" id="LsI-9j-hoh"/>
                             <constraint firstItem="65y-3x-OyQ" firstAttribute="trailing" secondItem="PUI-Ic-jCd" secondAttribute="trailing" type="default" id="M2J-qD-y1N"/>
                             <constraint firstItem="PUI-Ic-jCd" firstAttribute="leading" secondItem="Tnm-fd-HxT" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Sfm-sU-ZsY"/>
+                            <constraint firstItem="0EN-DM-A3X" firstAttribute="bottom" secondItem="zOW-Qz-hvL" secondAttribute="bottom" type="default" id="Ufe-k6-Bob"/>
                             <constraint firstAttribute="bottom" secondItem="HSL-lF-XJB" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="VF5-L6-DJg"/>
-                            <constraint firstItem="65y-3x-OyQ" firstAttribute="leading" secondItem="jhj-lk-Yfg" secondAttribute="leading" constant="-7" id="WEZ-D2-rN4"/>
                             <constraint firstItem="PUI-Ic-jCd" firstAttribute="leading" secondItem="zOW-Qz-hvL" secondAttribute="leading" type="default" id="XNJ-Wt-lTx"/>
                             <constraint firstAttribute="bottom" secondItem="Tnm-fd-HxT" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="Ydj-Og-DNm"/>
+                            <constraint firstItem="zOW-Qz-hvL" firstAttribute="leading" secondItem="0EN-DM-A3X" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="bC4-ew-MWw"/>
                             <constraint firstItem="HSL-lF-XJB" firstAttribute="top" secondItem="65y-3x-OyQ" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="d5Z-eI-lzu"/>
                             <constraint firstItem="Tnm-fd-HxT" firstAttribute="top" secondItem="65y-3x-OyQ" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="dpj-qf-VhO"/>
                             <constraint firstItem="G9O-L1-Tcp" firstAttribute="trailing" secondItem="jhj-lk-Yfg" secondAttribute="trailing" type="default" id="eDT-Im-J4t"/>
+                            <constraint firstItem="Tnm-fd-HxT" firstAttribute="baseline" secondItem="PUI-Ic-jCd" secondAttribute="baseline" type="default" id="fjU-TD-8dG"/>
                             <constraint firstItem="zOW-Qz-hvL" firstAttribute="top" secondItem="G9O-L1-Tcp" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="gLJ-wx-Y9s"/>
                             <constraint firstItem="G9O-L1-Tcp" firstAttribute="bottom" secondItem="eEn-za-2wg" secondAttribute="bottom" type="default" id="jgI-MN-2lH"/>
                             <constraint firstAttribute="bottom" secondItem="PUI-Ic-jCd" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="luY-jv-bgp"/>
                             <constraint firstItem="PUI-Ic-jCd" firstAttribute="top" secondItem="65y-3x-OyQ" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="n1R-9v-uu2"/>
                             <constraint firstItem="zOW-Qz-hvL" firstAttribute="trailing" secondItem="65y-3x-OyQ" secondAttribute="trailing" type="default" id="oD4-oD-YAW"/>
-                            <constraint firstItem="Tnm-fd-HxT" firstAttribute="leading" secondItem="jhj-lk-Yfg" secondAttribute="leading" constant="115" id="ovB-IR-JZ2"/>
                             <constraint firstItem="Tnm-fd-HxT" firstAttribute="centerX" secondItem="jhj-lk-Yfg" secondAttribute="centerX" type="default" id="qqe-oz-dQT"/>
+                            <constraint firstItem="PUI-Ic-jCd" firstAttribute="baseline" secondItem="HSL-lF-XJB" secondAttribute="baseline" type="default" id="qza-mS-73c"/>
                         </constraints>
                     </view>
                     <connections>
@@ -134,6 +154,7 @@
         <class className="PanelController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PanelController.h"/>
             <relationships>
+                <relationship kind="action" name="applyFilter:"/>
                 <relationship kind="action" name="backCamera:"/>
                 <relationship kind="action" name="frontCamera:"/>
                 <relationship kind="action" name="preferredInterfaceOrientationForPresentation"/>
