--- a/gcam-ios/resources/gcam.storyboard
+++ b/gcam-ios/resources/gcam.storyboard
@@ -98,23 +98,6 @@
                                     <action selector="saveImage:" destination="c1b-D6-9bv" eventType="touchUpInside" id="nIr-L7-JoH"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0EN-DM-A3X">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="45" id="StM-0d-a4r"/>
-                                    <constraint firstAttribute="width" constant="79" id="l2x-EA-SHn"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" title="Refilter">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="applyFilter:" destination="c1b-D6-9bv" eventType="touchUpInside" id="jfN-F5-YDk"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fJn-ku-H8H">
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="Lpx-Hp-3vH"/>
@@ -144,12 +127,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="fJn-ku-H8H" secondAttribute="bottom" constant="6" id="3SZ-0g-QCg"/>
-                            <constraint firstItem="0EN-DM-A3X" firstAttribute="bottom" secondItem="zOW-Qz-hvL" secondAttribute="bottom" type="default" id="4ch-Ka-TuV"/>
                             <constraint firstItem="65y-3x-OyQ" firstAttribute="trailing" secondItem="jhj-lk-Yfg" secondAttribute="trailing" type="default" id="4tv-fF-6Wp"/>
-                            <constraint firstItem="0EN-DM-A3X" firstAttribute="leading" secondItem="fJn-ku-H8H" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="65h-kW-hIk"/>
                             <constraint firstItem="G9O-L1-Tcp" firstAttribute="top" secondItem="jhj-lk-Yfg" secondAttribute="top" type="default" id="6po-V7-r8D"/>
                             <constraint firstItem="eEn-za-2wg" firstAttribute="top" secondItem="jhj-lk-Yfg" secondAttribute="top" type="default" id="9Mi-yb-4sq"/>
                             <constraint firstItem="HSL-lF-XJB" firstAttribute="bottom" secondItem="Tnm-fd-HxT" secondAttribute="bottom" type="default" id="Bbo-iK-chW"/>
+                            <constraint firstItem="zOW-Qz-hvL" firstAttribute="bottom" secondItem="fJn-ku-H8H" secondAttribute="bottom" type="default" id="FEo-JE-NBu"/>
                             <constraint firstItem="PUI-Ic-jCd" firstAttribute="top" secondItem="G9O-L1-Tcp" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="GMH-fG-1ZQ"/>
                             <constraint firstItem="zOW-Qz-hvL" firstAttribute="trailing" secondItem="PUI-Ic-jCd" secondAttribute="trailing" type="default" id="H7t-fE-s84"/>
                             <constraint firstItem="Tnm-fd-HxT" firstAttribute="leading" secondItem="HSL-lF-XJB" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Jth-4V-IcV"/>
@@ -161,17 +143,11 @@
                             <constraint firstItem="65y-3x-OyQ" firstAttribute="leading" secondItem="jhj-lk-Yfg" secondAttribute="leading" type="default" id="Txp-Mj-A5k"/>
                             <constraint firstItem="315-PK-aRg" firstAttribute="leading" secondItem="HSL-lF-XJB" secondAttribute="leading" type="default" id="Xgp-Tr-C15"/>
                             <constraint firstItem="Tnm-fd-HxT" firstAttribute="top" secondItem="G9O-L1-Tcp" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="Yln-kO-gpw"/>
-                            <constraint firstItem="fJn-ku-H8H" firstAttribute="bottom" secondItem="0EN-DM-A3X" secondAttribute="bottom" type="default" id="axd-W7-85f"/>
                             <constraint firstItem="PUI-Ic-jCd" firstAttribute="bottom" secondItem="Tnm-fd-HxT" secondAttribute="bottom" type="default" id="dHJ-Gl-UBA"/>
                             <constraint firstItem="G9O-L1-Tcp" firstAttribute="trailing" secondItem="jhj-lk-Yfg" secondAttribute="trailing" type="default" id="eDT-Im-J4t"/>
                             <constraint firstItem="65y-3x-OyQ" firstAttribute="top" secondItem="jhj-lk-Yfg" secondAttribute="top" constant="198" id="ei0-N8-AGA"/>
                             <constraint firstItem="315-PK-aRg" firstAttribute="leading" secondItem="fJn-ku-H8H" secondAttribute="leading" type="default" id="gEK-Jl-sgg"/>
-                            <constraint firstItem="fJn-ku-H8H" firstAttribute="baseline" secondItem="0EN-DM-A3X" secondAttribute="baseline" type="default" id="geY-VF-pKo"/>
-                            <constraint firstItem="zOW-Qz-hvL" firstAttribute="baseline" secondItem="fJn-ku-H8H" secondAttribute="baseline" type="default" id="nkT-b2-vcu"/>
                             <constraint firstItem="HSL-lF-XJB" firstAttribute="top" secondItem="eEn-za-2wg" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="qyJ-Qf-Bzg"/>
-                            <constraint firstItem="PUI-Ic-jCd" firstAttribute="baseline" secondItem="Tnm-fd-HxT" secondAttribute="baseline" type="default" id="tCG-5m-Mz8"/>
-                            <constraint firstItem="Tnm-fd-HxT" firstAttribute="baseline" secondItem="HSL-lF-XJB" secondAttribute="baseline" type="default" id="uII-lp-Yyp"/>
-                            <constraint firstItem="PUI-Ic-jCd" firstAttribute="baseline" secondItem="HSL-lF-XJB" secondAttribute="baseline" type="default" id="wTO-mE-TgJ"/>
                             <constraint firstItem="HSL-lF-XJB" firstAttribute="leading" secondItem="jhj-lk-Yfg" secondAttribute="leading" constant="10" id="yqX-0W-LxJ"/>
                         </constraints>
                     </view>
