--- a/gcam-ios/resources/gcam.storyboard
+++ b/gcam-ios/resources/gcam.storyboard
@@ -36,7 +36,12 @@
                                 <items>
                                     <barButtonItem title="Cam" id="awY-eM-b39">
                                         <connections>
-                                            <action selector="frontCamera:" destination="c1b-D6-9bv" id="bJ1-SS-uyC"/>
+                                            <action selector="backCamera:" destination="c1b-D6-9bv" id="wva-nY-2bN"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem title="Library" id="5F7-Jo-erJ">
+                                        <connections>
+                                            <action selector="toLibrary:" destination="c1b-D6-9bv" id="jZg-xe-C5r"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem title="Save" id="vay-uQ-aSA">
@@ -82,36 +87,36 @@
                             </toolbar>
                             <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="BOJ-0b-tRC">
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="JTp-qv-rgO">
-                                    <size key="itemSize" width="128" height="115"/>
+                                    <size key="itemSize" width="320" height="451"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" autoresizesSubviews="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="redraw" reuseIdentifier="Cell" id="0Eu-0S-LKF">
-                                        <rect key="frame" x="0.0" y="0.0" width="128" height="115"/>
+                                    <collectionViewCell autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" reuseIdentifier="Cell" id="0Eu-0S-LKF">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="451"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="128" height="115"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="451"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="742-zY-w59">
+                                                <imageView userInteractionEnabled="NO" tag="100" contentMode="scaleToFill" image="camera.png" translatesAutoresizingMaskIntoConstraints="NO" id="742-zY-w59">
                                                     <constraints>
-                                                        <constraint firstAttribute="height" constant="455" id="8v2-cp-XUe"/>
-                                                        <constraint firstAttribute="width" constant="320" id="exo-Ip-9b8"/>
+                                                        <constraint firstAttribute="width" constant="64" type="user" id="5He-xV-MgV"/>
+                                                        <constraint firstAttribute="height" constant="64" type="user" id="UbW-fZ-nbt"/>
                                                     </constraints>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="742-zY-w59" firstAttribute="centerY" secondItem="0Eu-0S-LKF" secondAttribute="centerY" type="default" id="PQB-Zo-JW8"/>
-                                            <constraint firstItem="742-zY-w59" firstAttribute="centerX" secondItem="0Eu-0S-LKF" secondAttribute="centerX" type="default" id="Rwb-11-XZk"/>
+                                            <constraint firstItem="742-zY-w59" firstAttribute="leading" secondItem="0Eu-0S-LKF" secondAttribute="leading" type="default" id="jov-PK-E99"/>
+                                            <constraint firstItem="742-zY-w59" firstAttribute="top" secondItem="0Eu-0S-LKF" secondAttribute="top" type="default" id="pgU-sv-frZ"/>
                                         </constraints>
                                     </collectionViewCell>
                                 </cells>
                                 <connections>
-                                    <outlet property="dataSource" destination="5xl-bE-5H7" id="otp-6D-C7W"/>
+                                    <outlet property="dataSource" destination="5xl-bE-5H7" id="Hgn-u3-QPL"/>
                                     <outlet property="delegate" destination="5xl-bE-5H7" id="siw-0m-jgW"/>
                                 </connections>
                             </collectionView>
@@ -149,7 +154,6 @@
                 <relationship kind="action" name="apply_gpuimage_filter:"/>
                 <relationship kind="action" name="numberOfSectionsInCollectionView:"/>
                 <relationship kind="action" name="preferredInterfaceOrientationForPresentation"/>
-                <relationship kind="action" name="runFilters:"/>
                 <relationship kind="action" name="shouldAutorotate"/>
                 <relationship kind="action" name="shouldAutorotateToInterfaceOrientation:"/>
                 <relationship kind="action" name="supportedInterfaceOrientations"/>
@@ -157,33 +161,20 @@
                 <relationship kind="outlet" name="collection_view" candidateClass="UICollectionView"/>
             </relationships>
         </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
         <class className="PanelController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/PanelController.h"/>
             <relationships>
+                <relationship kind="action" name="backCamera:"/>
                 <relationship kind="action" name="frontCamera:"/>
                 <relationship kind="action" name="preferredInterfaceOrientationForPresentation"/>
                 <relationship kind="action" name="saveImage:"/>
                 <relationship kind="action" name="shouldAutorotate"/>
                 <relationship kind="action" name="shouldAutorotateToInterfaceOrientation:"/>
                 <relationship kind="action" name="supportedInterfaceOrientations"/>
+                <relationship kind="action" name="toLibrary:"/>
                 <relationship kind="action" name="viewWillAppear:"/>
                 <relationship kind="outlet" name="image_view"/>
             </relationships>
-        </class>
-        <class className="UICollectionReusableView" superclassName="UIView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
-        </class>
-        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
-        </class>
-        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
-        </class>
-        <class className="UICollectionViewLayout" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
         </class>
     </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
